# model-regression-detection-system-by-yug-

./: .env.example  .gitignore  Dockerfile  README.md  RUNBOOK.md  pyproject.toml  requirements.txt
.github/workflows/: eval.yml
data/: golden_dataset_v1.json
prompts/: v1.yaml
src/model_regression/: cli.py  dataset.py  evaluator.py  judge.py  llm_feature.py  prompt_loader.py  reporting.py  schemas.py  slack.py  storage.py
